[package]
name = "quarto-rs"
version = "0.1.0"
authors = ["Guilherme <sitegui@sitegui.com.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.2"
serde = { version = "1.0.103", features=["derive"] }
serde_json = "1.0.42"